--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "18.2.0",
     "swiper": "^8.4.2"
   },
